# helixops

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  OPUS_IMPROVEMENT_ANALYSIS.md  README.md  ROADMAP_2026.md  SPIKE_NOTES.md  VISION.md  mypy_report.txt  pin.pip  pyproject.toml  requirements-lock.txt  setup.py
docs/: INCIDENT_OOM_CRASH.md  INCIDENT_SQLITE_WALL.md  OPERATIONAL_LEARNINGS.md  POSTMORTEM_WAVE_SCHEDULER.md  PRINCIPAL_ENGINEER_AUDIT.md
docs/adr/: 0001-conservative-crash-recovery.md  0002-asyncio-bounded-concurrency.md
docs/examples/: cli-cookbook.md  domain_model.md  retry_backoff.md
docs/notes/: event-taxonomy.md  execution-design.md  persistence-schema.md  recovery-decisions.md  storage-troubleshooting.md
docs/reference/: api-endpoints.md  metrics-glossary.md  workload-profiles.md
planning/: M13_SCOPE.md  M14_SCOPE.md
src/helixops/: __init__.py
src/helixops/api/: __init__.py  app.py  schemas.py  tracing.py
src/helixops/application/: __init__.py
src/helixops/benchmarks/: __init__.py  harness.py  optimizations.py
src/helixops/chaos/: impl_13.py  injector.py
src/helixops/cli/: __init__.py  app.py  formatters.py  models.py
src/helixops/commands/: __init__.py  impl_22.py
src/helixops/config/: __init__.py  settings.py  validators.py
src/helixops/domain/: __init__.py  errors.py  models.py  validation.py
src/helixops/execution/: __init__.py  executor.py  impl_7.py  impl_8.py  models.py
src/helixops/generation/: benchmarks.py  generator.py  models.py  profiles.py
src/helixops/infrastructure/: __init__.py  impl_28.py  impl_29.py  impl_30.py
src/helixops/observability/: __init__.py  diagnostics.py  health.py  impl_17.py  impl_18.py  metrics.py  reports.py
src/helixops/planning/: dag_engine.py  models.py  validation.py
src/helixops/recovery/: audit.py  impl_14.py  impl_15.py  manager.py  models.py  reconciliation.py
src/helixops/retry/: __init__.py  failures.py  policy.py
src/helixops/service/: impl_19.py  impl_20.py  lifecycle.py
src/helixops/storage/: database.py  event_journal.py  impl_10.py  impl_11.py  models.py  repository.py
src/helixops/testing/: impl_23.py  impl_24.py  impl_25.py  impl_26.py  impl_27.py
tests/: test_api.py  test_benchmarking.py  test_cli.py  test_dag_engine.py  test_execution_engine.py  test_generation.py  test_observability.py  test_persistence.py  test_production_hardening.py  test_recovery.py  test_retry_engine.py
tests/fixtures/: concurrency_cases.py  dag_edge_cases.py
