[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helixops"
version = "0.1.0"
description = "Self-Healing Distributed Workflow Simulation Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Faizan Zafar", email = "faixuytdum1@gmail.com"}
]
keywords = [
    "workflow",
    "distributed-systems",
    "simulation",
    "orchestration",
    "reliability-engineering"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Repository = "https://github.com/faixuytdum1-dev/helixops"
Documentation = "https://github.com/faixuytdum1-dev/helixops#readme"
Issues = "https://github.com/faixuytdum1-dev/helixops/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long, handled by black
    "W505",   # doc line too long
]

[tool.ruff.lint.per-file-ignores]
"src/helixops/api/*.py" = ["ARG001", "ARG002"]  # FastAPI requires unused dependency parameters
"src/helixops/benchmarks/*.py" = ["ARG001", "ARG004"]  # Benchmark utilities have unused parameters
"src/helixops/storage/database.py" = ["ARG001"]  # SQLAlchemy callbacks
"src/helixops/cli/app.py" = ["B008"]  # typer.Option is valid pattern in Typer CLI
"src/helixops/recovery/manager.py" = ["ARG002"]  # Recovery manager method signatures
"src/helixops/retry/failures.py" = ["ARG004"]  # Failure classification utility
"src/helixops/service/lifecycle.py" = ["ARG001"]  # Signal handlers require signature
"tests/*.py" = ["ARG001", "ARG002", "ARG005"]  # Test fixtures and mocks often have unused parameters
"tests/test_persistence.py" = ["ARG002"]  # Test fixtures

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = false
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]

[tool.coverage.run]
branch = true
source = ["src/helixops"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
